@@ -79,6 +79,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #13415: os.unsetenv() doesn't ignore errors anymore.
+
 - Issue #13322: Fix BufferedWriter.write() to ensure that BlockingIOError is
   raised when the wrapped raw file is non-blocking and the write would block.
   Previous code assumed that the raw write() would raise BlockingIOError, but
